--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
           </head>
           
           <body>
-            <div class=e1_2><div  class="e3_3"></div><div  class="e3_4"></div><div  class="e3_5"></div><div  class="e3_6"></div><div  class="e3_9"></div><span  class="e3_10">Quem está assistindo?</span><span  class="e15_2">Franciele</span><span  class="e15_3">Marques</span><span  class="e15_4">Flávia </span><span  class="e15_6">Vanessa</span><div  class="e15_7"></div><span  class="e15_8">Manage Profiles</span><div  class="e15_9"></div><span  class="e15_10">Grasielly</span></div>
+            <div class=e4_26><div  class="e10_53"></div><div  class="e10_57"></div><div  class="e10_55"></div><div  class="e13_10"></div><div  class="e15_11"></div><div  class="e18_14"></div><span  class="e18_15">Brasil: top 10 em séries hoje</span><span  class="e18_16">Início</span><span  class="e18_17">Séries</span><span  class="e18_18">Filmes</span><span  class="e18_19">Bombando</span><span  class="e18_20">Minha lista</span><span  class="e25_21">1</span><span  class="e25_23">2</span><span  class="e25_24">3</span><span  class="e25_26">4</span><span  class="e25_27">N</span><span  class="e25_28">SÉRIE</span><span  class="e25_29">LA CASA DE PAPEL</span></div>
           </body>
           </html>
